fix: routing rule for proxy and bench nginx; new site creation for devbox

--- a/agent/templates/bench/nginx.conf.jinja2
+++ b/agent/templates/bench/nginx.conf.jinja2
@@ -219,10 +219,12 @@ server {
 
 	{% if for_devbox %}
 
-	location /vscode {
+	location ^~ /vscode {
 		proxy_http_version 1.1;
-		proxy_set_header Origin https://$http_host;
 		proxy_set_header Host $host;
+      	proxy_set_header Upgrade $http_upgrade;
+      	proxy_set_header Connection upgrade;
+      	proxy_set_header Accept-Encoding gzip;
 
 		proxy_pass http://{{ bench_name }}-code-server;
 	}
