--- a/agent/templates/bench/nginx.conf.jinja2
+++ b/agent/templates/bench/nginx.conf.jinja2
@@ -219,14 +219,16 @@ server {
 
 	{% if for_devbox %}
 
-	location ^~ /vscode {
-		proxy_http_version 1.1;
+	location /vscode/ {
+		rewrite ^/vscode(/.*)$ $1 break;
+		http://{{ bench_name }}-code-server;
 		proxy_set_header Host $host;
-      	proxy_set_header Upgrade $http_upgrade;
-      	proxy_set_header Connection upgrade;
-      	proxy_set_header Accept-Encoding gzip;
-
-		proxy_pass http://{{ bench_name }}-code-server;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection upgrade;
+		proxy_set_header Accept-Encoding gzip;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
 	}
 
 	{% endif %}
