--- a/agent/templates/agent/supervisor.conf.jinja2
+++ b/agent/templates/agent/supervisor.conf.jinja2
@@ -33,30 +33,24 @@ directory={{ directory }}
 
 {% if sleepy_containers %}
 [program:bench-starter]
-command=
+command=bash -c "{{ directory }}/repo/wait-for-it.sh redis://127.0.0.1:{{ redis_port }} && exec {{directory}}/env/bin/python {{ directory }}/repo/agent/bench_starter.py"
 environment=PYTHONUNBUFFERED=1
 autostart=true
 autorestart=true
-stopwaitsecs=1500
-killasgroup=true
-numprocs=1
-process_name=%(program_name)s-%(process_num)d
-stdout_logfile={{ directory }}/logs/
-stderr_logfile={{ directory }}/logs/
+stopwaitsecs=15
+stdout_logfile={{ directory }}/logs/bench_starter.log
+stderr_logfile={{ directory }}/logs/bench_starter.error.log
 user={{ user }}
 directory={{ directory }}
 
 [program:bench-stopper]
-command=
+command=bash -c "{{ directory }}/repo/wait-for-it.sh redis://127.0.0.1:{{ redis_port }} && exec {{directory}}/env/bin/python {{ directory }}/repo/agent/bench_stopper.py"
 environment=PYTHONUNBUFFERED=1
 autostart=true
 autorestart=true
-stopwaitsecs=1500
-killasgroup=true
-numprocs=1
-process_name=%(program_name)s-%(process_num)d
-stdout_logfile={{ directory }}/logs/
-stderr_logfile={{ directory }}/logs/
+stopwaitsecs=15
+stdout_logfile={{ directory }}/logs/bench_stopper.log
+stderr_logfile={{ directory }}/logs/bench_stopper.error.log
 user={{ user }}
 directory={{ directory }}
 
