--- a/agent/templates/agent/nginx.conf.jinja2
+++ b/agent/templates/agent/nginx.conf.jinja2
@@ -18,6 +18,11 @@ server {
 	listen 443 ssl http2;
 	server_name {{ name }};
 
+	{% if allow_sleepy_containers %}
+	access_log /var/log/nginx/access.log main;
+	error_log /var/log/nginx/error.log warn;
+	{% endif %}
+
 	ssl_certificate {{ tls_directory }}/fullchain.pem;
 	ssl_certificate_key {{ tls_directory }}/privkey.pem;
 	ssl_trusted_certificate {{ tls_directory }}/chain.pem;
