--- a/agent/templates/nginx/nginx.conf.jinja2
+++ b/agent/templates/nginx/nginx.conf.jinja2
@@ -37,8 +37,12 @@ http {
 
 	log_format main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for" "$host" $request_time';
 
+	{% if allow_sleepy_containers %}
+	access_log off;
+	{% else %}
 	access_log /var/log/nginx/access.log main;
 	error_log /var/log/nginx/error.log warn;
+	{% endif %}
 
 	sendfile on;
 	tcp_nopush on;
