--- a/agent/templates/bench/nginx.conf.jinja2
+++ b/agent/templates/bench/nginx.conf.jinja2
@@ -194,17 +194,15 @@ server {
 	add_header X-Content-Type-Options nosniff;
 	add_header X-XSS-Protection "1; mode=block";
 
-	{% if sleepy_containers %}
+	{% if allow_sleepy_containers %}
 	access_log /var/log/nginx/{{ bench_name }}-access.log main;
 	error_log /var/log/nginx/{{ bench_name }}-error.log warn;
 
 	location /bench-start {
-		proxy_set_header X-BENCH-NAME {{ bench_name }};
 		proxy_pass http://127.0.0.1:{{ agent_port }}/bench-start/{{ bench_name }};
 	}
 
 	location /bench-status {
-		proxy_set_header X-BENCH-NAME {{ bench_name }};
 		proxy_pass http://127.0.0.1:{{ agent_port }}/bench-status/{{ bench_name }};
 	}
 	{% endif %}
