fix(proxy): Show traceback for api calls
(cherry picked from commit 71cb1710450df770a4615ab370a7d03c90823343)

--- a/agent/templates/proxy/nginx.conf.jinja2
+++ b/agent/templates/proxy/nginx.conf.jinja2
@@ -235,6 +235,9 @@ server {
 		if ($upstream_http_x_page_name) {
 			return 500;
 		}
+		if ($upstream_http_content_type ~* "application/json") {
+			return 500;
+		}
 		root {{ error_pages_directory }};
 		internal;
 	}
